Fix float/overflow bug in contact form.

--- a/app/assets/stylesheets/_contact.sass
+++ b/app/assets/stylesheets/_contact.sass
@@ -41,8 +41,11 @@
       float: none
       padding: 0
 
-  .message_deadlines textarea
-    height: rhythm(5)
+  .message_deadlines
+    clear: both
+
+    textarea
+      height: rhythm(5)
 
   p
     padding-left: 2em
